Release 0.6.1.